--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<p>A flower, sometimes known as a bloom or blossom, is the reproductive structure found in flowering plants.</p>
 </div>
 <div>
-	<h1 id="f2">Roses picture</h1>
+	<h1 id="f2">Roses pictures</h1>
 	<p>A rose is either a woody perennial flowering plant of the genus Rosa in the family Rosaceae or the flower it bears.</p>
 </div>
 </body>
